# oxide

./: .gitignore  Cargo.toml
src/: main.rs
src/config/: cli.rs  config.rs  mod.rs
src/core/: server.rs
src/http/: gzip.rs  mod.rs  parser.rs  routing.rs  status_codes.rs
