[package]
name = "oxide"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
httparse = "1.10.1"
tracing = "0.1"
tracing-subscriber = "0.3.0"
clap = { version = "4.5.42", features = ["derive"] }
anyhow = "1.0"
